Fixed positioning of graphs: now aligned

--- a/asrweb/grasp/src/main/resources/public/css/bootstrap_override.css
+++ b/asrweb/grasp/src/main/resources/public/css/bootstrap_override.css
@@ -58,6 +58,11 @@ text {
     margin-top: 5px;
 }
 
+#poag-msa, #poag-merged {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
 #poag-all {
     height: 550px;
     overflow: auto;
